<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.food.FoodFragment">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:elevation="4dp"
        android:background="@drawable/bg_bottom_nav"
        app:labelVisibilityMode="labeled"
        app:itemIconTint="@drawable/bottom_bar_icon_color_selector"
        app:itemTextColor="@drawable/bottom_bar_icon_color_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_bar" >
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <LinearLayout
        android:id="@+id/llTopText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_user"
            android:fontFamily="@font/poppins_medium"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_light"
            android:textColor="#C7C9D9"
            android:text="@string/date" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_detail"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        android:src="@color/white"
        app:layout_constraintEnd_toEndOf="@id/llTopText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTopText"/>


    <View
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:background="@drawable/bg_dashboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </View>


    <TextView
        android:id="@id/tvFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What kind of food did you eat today?"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="bold"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/constraintLayout"/>

    <com.parrosz.carecarb.ui.customview.Button
        android:id="@+id/btn_takePicture"
        android:layout_width="309dp"
        android:layout_height="53dp"
        android:background="@color/green"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/take_a_picture"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_takePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFood"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/img_detail"
        app:layout_constraintEnd_toEndOf="@id/img_detail"
        app:layout_constraintStart_toStartOf="@id/img_detail"
        app:layout_constraintTop_toTopOf="@id/img_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>